# inductor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
equiv/: equiv_index.cpp  equiv_index.h  equiv_string.cpp  equiv_string.h
exec/: execution.cpp  execution.h  execution_settings.cpp  execution_settings.h
input/Entailments/: list-liste.smt2  list-listeo.smt2  list-listo.smt2  list-listp.smt2  listp-list.smt2  lls-llsa-1.smt2  lls-llsa-2.smt2  llsa-lls-1.smt2  llsa-lls-2.smt2  ls-lsa.smt2  ls-lse+lso.smt2  ls-lse.smt2  ls-lseo.smt2  ls-lso.smt2  ls-lsp.smt2  ls-lspeo.smt2  lsa-ls.smt2  lse-ls.smt2  lse-lso.smt2  lse-lspeo.smt2  lso-ls.smt2  lso-lse.smt2  lso-lspeo.smt2  lsp-ls.smt2  lsp-lse+lso.smt2  lsp-lse.smt2  lsp-lspeo.smt2  lspeo-ls.smt2  lspeo-lse+lso.smt2  lspeo-lso.smt2  tree-treep.smt2  tree-treep1.smt2  tree-treep2.smt2  treep-tree.smt2  treep1-tree.smt2  treep1-treep2.smt2  treep2-tree.smt2  treep2-treep1.smt2
input/Logics/: SEPLOG2.smt2
input/Strategies/: strat.txt
input/Theories/: SepLogic2.smt2
pred/: pred_analysis.cpp  pred_analysis.h  pred_definition.cpp  pred_definition.h  pred_table.cpp  pred_table.h
proof/: proof_build.cpp  proof_build.h  proof_checker.cpp  proof_checker.h  proof_rule.cpp  proof_rule.h  proof_state.cpp  proof_state.h  proof_tree.cpp  proof_tree.h  proof_util.cpp  proof_util.h
reach/: reach_index.cpp  reach_index.h  reach_string.cpp  reach_string.h
smtlib/ast/: ast_abstract.h  ast_attribute.cpp  ast_attribute.h  ast_basic.h  ast_classes.h  ast_command.cpp  ast_command.h  ast_datatype.cpp  ast_datatype.h  ast_fun.cpp  ast_fun.h  ast_identifier.cpp  ast_identifier.h  ast_interfaces.h  ast_literal.cpp  ast_literal.h  ast_logic.cpp  ast_logic.h  ast_match.cpp  ast_match.h  ast_s_expr.cpp  ast_s_expr.h  ast_script.cpp  ast_script.h  ast_sort.cpp  ast_sort.h  ast_symbol_decl.cpp  ast_symbol_decl.h  ast_term.cpp  ast_term.h  ast_theory.cpp  ast_theory.h  ast_variable.cpp  ast_variable.h
smtlib/ast/stack/: ast_symbol_stack.cpp  ast_symbol_stack.h  ast_symbol_table.cpp  ast_symbol_table.h  ast_symbol_util.cpp  ast_symbol_util.h
smtlib/ast/visitor/: ast_duplicator.cpp  ast_duplicator.h  ast_predicate_unfolder.cpp  ast_predicate_unfolder.h  ast_sortedness_checker.cpp  ast_sortedness_checker.h  ast_syntax_checker.cpp  ast_syntax_checker.h  ast_term_replacer.cpp  ast_term_replacer.h  ast_term_sorter.cpp  ast_term_sorter.h  ast_var_renamer.cpp  ast_var_renamer.h  ast_visitor.cpp  ast_visitor.h  ast_visitor_extra.h
smtlib/cvc/: cvc_interface.cpp  cvc_interface.h  cvc_term_translator.cpp  cvc_term_translator.h
smtlib/parser/: smtlib-bison-parser.y  smtlib-bison-parser.y.c  smtlib-bison-parser.y.h  smtlib-flex-lexer.l  smtlib-flex-lexer.l.c  smtlib-glue.cpp  smtlib-glue.h  smtlib_parser.cpp  smtlib_parser.h
smtlib/sep/: sep_abstract.h  sep_attribute.cpp  sep_attribute.h  sep_basic.cpp  sep_basic.h  sep_classes.h  sep_command.cpp  sep_command.h  sep_datatype.cpp  sep_datatype.h  sep_fun.cpp  sep_fun.h  sep_identifier.cpp  sep_identifier.h  sep_interfaces.h  sep_literal.cpp  sep_literal.h  sep_logic.cpp  sep_logic.h  sep_match.cpp  sep_match.h  sep_s_expr.cpp  sep_s_expr.h  sep_script.cpp  sep_script.h  sep_sort.cpp  sep_sort.h  sep_symbol_decl.cpp  sep_symbol_decl.h  sep_term.cpp  sep_term.h  sep_theory.cpp  sep_theory.h  sep_variable.cpp  sep_variable.h
smtlib/sep/stack/: sep_symbol_stack.cpp  sep_symbol_stack.h  sep_symbol_table.cpp  sep_symbol_table.h  sep_symbol_util.cpp  sep_symbol_util.h
smtlib/sep/transl/: sep_translator.cpp  sep_translator.h
smtlib/sep/visitor/: sep_duplicator.cpp  sep_duplicator.h  sep_occ_checker.cpp  sep_occ_checker.h  sep_stack_loader.cpp  sep_stack_loader.h  sep_term_replacer.cpp  sep_term_replacer.h  sep_term_sorter.cpp  sep_term_sorter.h  sep_unifier.cpp  sep_unifier.h  sep_var_finder.cpp  sep_var_finder.h  sep_var_renamer.cpp  sep_var_renamer.h  sep_visitor.cpp  sep_visitor.h  sep_visitor_extra.h  sep_visitor_stack.h  sep_visitor_stack_extra.h
strat/: proof_strategy.cpp  proof_strategy.h
strat/ast/: ast_abstract.h  ast_automaton.cpp  ast_automaton.h  ast_basic.cpp  ast_basic.h  ast_file.cpp  ast_file.h  ast_transition.cpp  ast_transition.h  ast_translator.cpp  ast_translator.h
strat/parser/: Makefile  strat-bison-parser.y  strat-bison-parser.y.c  strat-bison-parser.y.h  strat-flex-lexer.l  strat-flex-lexer.l.c  strat-glue.cpp  strat-glue.h  strat_parser.cpp  strat_parser.h
util/: configuration.cpp  configuration.h  error_messages.cpp  error_messages.h  global_typedef.h  global_values.cpp  global_values.h  logger.cpp  logger.h
